# wa-proxy

./: CMakeLists.txt  README.md
include/wa_proxy/: json_parser.hpp  tables.hpp  wa_proxy.hpp
ricardian/: waproxy_contract.contracts.md
src/: CMakeLists.txt  actions.cpp
